Changelog
=========


1.3.1 (unreleased)
------------------

- Inplace migrators for migrating from egov.contactdirectory. [jone]

- Display the function of the contact of a member block if the option
  "Acquire address" is checked on the member block.
  [mbaechtold]

- Install a newer version of "collective.geo.openlayers". This makes the
  "ftw.openlayerhotfix" obsolete.
  [mbaechtold]


1.3.0 (2016-08-10)
------------------

- Remove metadata.xml-dependencie to ftw.simplelayout for the simplelayout extra.
  The extra is an addon of ftw.simplelayout and should not install it.
  [elioschmutz]

- Added ldap-to-contact sync.
  [lknoepfel]


1.2.0 (2016-03-30)
------------------

- Redesign ftw.contacts.
  [Kevin Bieri]

1.1.0 (2016-03-30)
------------------

- Remove unused geo configurations due to a changed map implementation
  [elioschmutz]

- Fix geolocation lookup for georeferenced contacts.
  The map will no longer be rendered through the viewlet. It is implemented
  directly into the contact.pt for better control.
  [elioschmutz]

- Add missing behavior for geo referenced contact.
  [elioschmutz]

- Fix broken profilehook name for ftw.geo integraton.
  [elioschmutz]

- Disable rendering map widget through the viewlet.
  The map will be rendered directly in the contact.pt now.
  [elioschmutz]

- Change ``reload`` view name to more specific name ``reload_contacts``.
  [elioschmutz]

- Trigger event if contacts are reloaded.
  [elioschmutz]

- Adjust contact_summary template to display the title in the details
  only if it is different than the organization name.
  This happens if you fill only an organization name without a first and last
  name.
  [elioschmutz]

- Fix css styles for plonetheme.onegovbear
  [elioschmutz]


1.0.0 (2015-12-04)
------------------

- Nothing changed yet