@@ -5,6 +5,8 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
+- Add option to hide the memberships on the contact detail view. [mbaechtold]
+
 - Inplace migrators for migrating from egov.contactdirectory. [jone]
 
 - Display the function of the contact of a member block if the option
